chore: update dashboard

--- a/kubernetes/apps/dashboard/index.html
+++ b/kubernetes/apps/dashboard/index.html
@@ -135,7 +135,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>MCZTEST Homelab Dashboard</h1>
+            <h1>Homelab Dashboard</h1>
             <p class="subtitle">home.mcztest.com</p>
         </header>
 
