Fix dashboard to handle API array response
- API returns apps as array directly, not wrapped in {apps: [...]}
- Updated JavaScript to handle both formats
- Dashboard should now display all 10 apps

--- a/kubernetes/apps/dashboard/index.html
+++ b/kubernetes/apps/dashboard/index.html
@@ -213,7 +213,8 @@
             try {
                 const response = await fetch('https://registry-api.home.mcztest.com/api/v1/apps');
                 const data = await response.json();
-                const apps = data.apps || [];
+                // API returns array directly, not wrapped in object
+                const apps = Array.isArray(data) ? data : (data.apps || []);
 
                 // Group apps by category
                 const kubernetes = apps.filter(app => app.category === 'kubernetes');
